src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__routing__tests__draw_routing_mode_overlay_snapshot.snap
---
source: src/ui/layout/overlay/routing.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                       ┌───────────────────────────────┐                                       │
│                                       │   Settings › Routing › Mode   │                                       │
│                                       │                               │                                       │
│                                       │           Global              │                                       │
│                                       │           Bypass RU           │                                       │
│                                       │           Only RU             │                                       │
│                                       │                               │                                       │
│                                       │      󰌑 apply · q/󱊷 close      │                                       │
│                                       └───────────────────────────────┘                                       │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
